Fix or suppress a load of compiler warnings. Various changes/optimisations as suggested by FindBugs.